WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159768
Fix the !ENABLE(WEB_SOCKETS) build after
r202930
https://bugs.webkit.org/show_bug.cgi?id=159768
Summary
Fix the !ENABLE(WEB_SOCKETS) build after r202930
Csaba Osztrogonác
Reported
2016-07-14 08:47:02 PDT
https://trac.webkit.org/changeset/202930
broke the !ENABLE(WEB_SOCKETS) build In file included from ../../Source/WTF/wtf/RefPtr.h:30:0, from ../../Source/WTF/wtf/VectorTraits.h:25, from ../../Source/WTF/wtf/Vector.h:35, from ../../Source/WebCore/platform/graphics/LayoutRect.h:38, from ../../Source/WebCore/accessibility/AccessibilityObject.h:34, from ../../Source/WebCore/accessibility/AXObjectCache.h:30, from ../../Source/WebCore/page/ChromeClient.h:25, from ../../Source/WebCore/loader/EmptyClients.h:31, from ../../Source/WebCore/loader/EmptyClients.cpp:29: ../../Source/WTF/wtf/PassRefPtr.h: In instantiation of 'void WTF::refIfNotNull(T*) [with T = WebCore::ThreadableWebSocketChannel]': ../../Source/WTF/wtf/RefPtr.h:46:89: required from 'WTF::RefPtr<T>::RefPtr(T*) [with T = WebCore::ThreadableWebSocketChannel]' ../../Source/WebCore/loader/EmptyClients.cpp:270:12: required from here ../../Source/WTF/wtf/PassRefPtr.h:34:13: error: invalid use of incomplete type 'class WebCore::ThreadableWebSocketChannel' In file included from ../../Source/WebCore/loader/EmptyClients.h:45:0, from ../../Source/WebCore/loader/EmptyClients.cpp:29: ../../Source/WebCore/page/SocketProvider.h:34:7: note: forward declaration of 'class WebCore::ThreadableWebSocketChannel' In file included from ../../Source/WTF/wtf/RefPtr.h:30:0, from ../../Source/WTF/wtf/VectorTraits.h:25, from ../../Source/WTF/wtf/Vector.h:35, from ../../Source/WebCore/platform/graphics/LayoutRect.h:38, from ../../Source/WebCore/accessibility/AccessibilityObject.h:34, from ../../Source/WebCore/accessibility/AXObjectCache.h:30, from ../../Source/WebCore/page/ChromeClient.h:25, from ../../Source/WebCore/loader/EmptyClients.h:31, from ../../Source/WebCore/loader/EmptyClients.cpp:29: ../../Source/WTF/wtf/PassRefPtr.h: In instantiation of 'void WTF::derefIfNotNull(T*) [with T = WebCore::ThreadableWebSocketChannel]': ../../Source/WTF/wtf/RefPtr.h:62:73: required from 'WTF::RefPtr<T>::~RefPtr() [with T = WebCore::ThreadableWebSocketChannel]' ../../Source/WebCore/loader/EmptyClients.cpp:270:12: required from here ../../Source/WTF/wtf/PassRefPtr.h:40:13: error: invalid use of incomplete type 'class WebCore::ThreadableWebSocketChannel' In file included from ../../Source/WebCore/loader/EmptyClients.h:45:0, from ../../Source/WebCore/loader/EmptyClients.cpp:29: ../../Source/WebCore/page/SocketProvider.h:34:7: note: forward declaration of 'class WebCore::ThreadableWebSocketChannel' ninja: build stopped: subcommand failed. ==== class ThreadableWebSocketChannel is declared in Source/WebCore/Modules/websockets/ThreadableWebSocketChannel.h inside ENABLE(WEBSOCKET) guard. It's incorrect to use it without guards.
Attachments
Patch
(6.40 KB, patch)
2016-07-14 08:50 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Patch
(7.85 KB, patch)
2016-07-14 08:57 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-07-14 08:50:18 PDT
Created
attachment 283648
[details]
Patch
Csaba Osztrogonác
Comment 2
2016-07-14 08:53:44 PDT
Additionally there are some unused parameter warning related to 'socketProvider'. I'll add these fixes to this one immediately.
Csaba Osztrogonác
Comment 3
2016-07-14 08:57:16 PDT
Created
attachment 283649
[details]
Patch
WebKit Commit Bot
Comment 4
2016-07-14 10:51:40 PDT
Comment on
attachment 283649
[details]
Patch Rejecting
attachment 283649
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 283649, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: /git.webkit.org/WebKit 339a8d8..8a107aa master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 203225 = 339a8d861053d5dbd41d01ff960c88793603b898
r203226
= 8a107aa8dffa1477ca3fad983ba4419da4e07547 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.webkit.org/results/1681156
WebKit Commit Bot
Comment 5
2016-07-14 11:34:12 PDT
Comment on
attachment 283649
[details]
Patch Rejecting
attachment 283649
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 283649, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: /git.webkit.org/WebKit 647e9d0..a32bcc6 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 203228 = 647e9d0159e943fbf808c98261ffff8a4c88fbd0
r203229
= a32bcc63db2b7bd30fce1e61cddd42a2bda748f9 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
http://webkit-queues.webkit.org/results/1681335
WebKit Commit Bot
Comment 6
2016-07-14 13:15:11 PDT
Comment on
attachment 283649
[details]
Patch Clearing flags on attachment: 283649 Committed
r203238
: <
http://trac.webkit.org/changeset/203238
>
WebKit Commit Bot
Comment 7
2016-07-14 13:15:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug