Fix the !ENABLE(WEB_SOCKETS) build after r202930 https://bugs.webkit.org/show_bug.cgi?id=159768

Reviewed by Alex Christensen.

Source/WebCore:

* loader/EmptyClients.cpp:
* loader/EmptyClients.h:
* page/SocketProvider.h:
* workers/WorkerGlobalScope.cpp:
(WebCore::WorkerGlobalScope::WorkerGlobalScope):
* workers/WorkerThread.cpp:
(WebCore::WorkerThread::WorkerThread):

Source/WebKit/mac:

* Misc/WebSocketProvider.h:

Source/WebKit/win:

* WebSocketProvider.h:

Source/WebKit2:

* WebProcess/Network/WebSocketProvider.h:


Canonical link: https://commits.webkit.org/177928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203238 268f45cc-cd09-0410-ab3c-d52691b4dbfc