Source/WebCore/loader/EmptyClients.cpp
@@ -264,10 +264,12 @@ void EmptyEditorClient::registerUndoStep(PassRefPtr<UndoStep>)
 void EmptyEditorClient::registerRedoStep(PassRefPtr<UndoStep>)
 {
 }
-    
+
+#if ENABLE(WEB_SOCKETS)
 RefPtr<ThreadableWebSocketChannel> EmptySocketProvider::createWebSocketChannel(ScriptExecutionContext&, WebSocketChannelClient&)
 {
     return nullptr;
 }
+#endif
 
 }
