Source/WebCore/loader/EmptyClients.h
@@ -650,7 +650,9 @@ class EmptySocketProvider final : public SocketProvider {
 public:
     virtual ~EmptySocketProvider() { }
     static Ref<EmptySocketProvider> create() { return adoptRef(*new EmptySocketProvider); }
+#if ENABLE(WEB_SOCKETS)
     RefPtr<ThreadableWebSocketChannel> createWebSocketChannel(ScriptExecutionContext&, WebSocketChannelClient&) override;
+#endif
 };
 
 void fillWithEmptyClients(PageConfiguration&);
