Source/WebKit/win/WebSocketProvider.h
@@ -30,6 +30,8 @@
 class WebSocketProvider final : public WebCore::SocketProvider {
 public:
     static Ref<WebSocketProvider> create() { return adoptRef(*new WebSocketProvider); }
+#if ENABLE(WEB_SOCKETS)
     RefPtr<WebCore::ThreadableWebSocketChannel> createWebSocketChannel(WebCore::ScriptExecutionContext&, WebCore::WebSocketChannelClient&) override;
+#endif
     virtual ~WebSocketProvider() { }
 };
